--- a/templates/index.html
+++ b/templates/index.html
@@ -48,5 +48,8 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
     <script src="{{ url_for('static', filename='js/script.js')}}"></script>
+
+    <script src="{{url_for('static', filename='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/L.Geoserver.js')}}"></script>
   </body>
 </html>
