--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,27 @@ body, html {
   z-index: 1;
 }
 
+/*Configuration du sidebar*/
+.toggle-sidebar {
+  position: absolute;
+  top: 80px;
+  left: 20px;
+  z-index: 1001;
+  background: rgba(0, 123, 255, 0.80);
+  color: white;
+  border: none;
+  padding: 10px 14px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+.sidebar.hidden {
+  display: none;
+}
+
+
 /* Ajustement du bouton de zoom au niveau voulu */
 .leaflet-control-zoom {
   top: 130px; 
@@ -45,6 +66,10 @@ body, html {
   padding: 6px 14px;
   border-radius: 20px;
   cursor: pointer;
+}
+
+#email{
+  width: 95%;
 }
 
 .sidebar {
@@ -125,8 +150,8 @@ body, html {
 #search{
   padding: 8px; 
   border: 1px solid #ccc; 
-  border-radius: 6px; 
-  width: 100%; 
+  border-radius: 6px;
+  width: 95%; 
   max-width: 300px; 
   margin-top: 1px;
 }
