--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
   </head>
   <body>
+
+    <h1>{{ status }}</h1>
     <!--Affichage de la barre de haut-->
     <div class="topbar">
       <h3 class="logo">Centre des affaires de Lubumbashi</h3>
