--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Centre des affaires de Lubumbashi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
 
@@ -27,7 +26,7 @@
 
     <!--Menu de gauche-->
     <div class="sidebar">
-      <h3 for="categorie"><strong>Catégories</strong></h3>
+      <label>Catégories</label>
       <select id="categorie" name="categorie">
         <option value="tous" selected>Tous les commerces</option>
         <option value="alimentations">Alimentations</option>
@@ -39,14 +38,14 @@
       </select>
 
       <!--Affichage de la barre de recherche-->
-      <h3 for="search"><strong>Rechercher</strong></h3>
+      <h3><strong>Rechercher</strong></h3>
         <input type="text" id="search" name="search" placeholder="Ecrivez le nom du magasin...">
 
       <!--Affichage du bouton de telechargement des donnees-->
       <h3><strong>Export</strong></h3>
       <div class="Export">
-        <button>GeoJSON</button>
-        <button>GeoPackage</button>
+        <button id="btnGeoJSON" type="button">GeoJSON</button>
+        <button id="btnGeoPackage" type="button">GeoPackage</button>
       </div>
 
       <!--Partie pour renseigner le mail afin d'y envoyer les donnees-->
@@ -58,7 +57,6 @@
 
   
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
     <script src="{{ url_for('static', filename='js/script.js')}}"></script>
     <script src="{{ url_for('static', filename='js/leaflet-commande.js')}}"></script>
 
