--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 
     <!--Menu de gauche-->
     <div class="sidebar">
-      <label>Catégories</label>
+      <h3><strong>Catégories</strong></h3>
       <select id="categorie" name="categorie">
         <option value="tous" selected>Tous les commerces</option>
         <option value="alimentations">Alimentations</option>
