--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,6 +76,7 @@ body, html {
   position: absolute;
   top: 80px;
   left: 20px;
+  display: none;
   background: rgba(254, 255, 255, 0.3);
   padding: 20px;
   width: 300px;
