--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
 
       <!--Partie pour renseigner le mail afin d'y envoyer les donnees-->
       <h3><strong>E-mail</strong></h3>
-      <input id='email' type="email" value="mauricekanama1@gmail.com">
+      <input type="email" id='email' name="email" placeholder="Ecrivez le nom du magasin...">
 
       <button class="export-btn">Export data</button>
     </div>
