--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,7 +36,7 @@ body, html {
 }
 
 /* Parametre du texte de la barre de haut */
-.topbar .logo {
+.topbar .name {
   font-weight: bold;
   font-size: 20px;
 }
@@ -53,7 +53,7 @@ body, html {
 
 /* LES PARAMETRES DE LA BARRE DE GAUCHE */
 
-/*Configuration du sidebar*/
+/*Configuration du sidebar ou barre de gauche*/
 .toggle-sidebar {
   position: absolute;
   top: 80px;
@@ -69,10 +69,12 @@ body, html {
   box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
+/* Affichage de la barre de gauche */
 .sidebar.hidden {
   display: none;
 }
 
+/* Toute la barre de gauche */
 .sidebar {
   position: absolute;
   top: 80px;
@@ -85,10 +87,11 @@ body, html {
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   font-size: 14px;
 }
-/* Barre categorie */
+
+/* Formatage des titres du 3eme niveau */
 .sidebar h3 {
-  margin-top: 5px;
-  margin-bottom: 10px;
+  margin-top: 15px;
+  margin-bottom: 5px;
 }
 
 #categorie{
@@ -104,7 +107,7 @@ body, html {
   padding: 8px; 
   border: 1px solid #ccc; 
   border-radius: 6px;
-  width: 95%; 
+  width: 93%; 
   max-width: 300px; 
   margin-top: 1px;
 }
@@ -123,53 +126,6 @@ body, html {
   margin-top: 5px;
   border: 1px solid #ccc;
   border-radius: 6px;
-}
-
-#email{
-  width: 95%;
-}
-
-.Export button {
-  margin-right: 8px;
-  margin-top: 6px;
-  padding: 6px 10px;
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-  color: white;
-  background: black;
-}
-
-.Export button:hover, .Export .active:hover {
-  background-color: #00d4ff;
-}
-
-.export-btn {
-  width: 100%;
-  margin-top: 10px;
-  padding: 10px;
-  background: #111;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.export-btn:hover{
-  background-color: #00d4ff;
-}
-
-.area-label {
-  position: absolute;
-  bottom: 30px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(0, 123, 255, 0.85);
-  color: white;
-  padding: 6px 12px;
-  border-radius: 5px;
-  z-index: 999;
-  font-size: 14px;
 }
 
 /* ASPECTS RESPONSIVES DE LA PAGE */
@@ -211,15 +167,6 @@ body, html {
     display: block;
     margin-bottom: 7px;
   }
-
-  .sidebar input[type="email"] {
-    width: 95%;
-    padding: 6px;
-    color: #ccc;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-  }
 }
 
 /*Responsive : petit écran (Telephones) */
@@ -239,19 +186,5 @@ body, html {
 
   .sidebar h3 {
     font-size: 14px;
-  }
-
-  .sidebar label {
-    display: block;
-    margin-bottom: 5px;
-  }
-
-  .sidebar input[type="email"] {
-    width: 80%;
-    padding: 6px;
-    color: #ccc;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
   }
 }
