--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,11 @@
       </select>
 
       <!--Affichage de la barre de recherche-->
-      <h3><strong>Rechercher</strong></h3>
+      <h3><strong>Recherche</strong></h3>
+      <div class="search-container">
         <input type="text" id="search" name="search" placeholder="Ecrivez le nom du magasin...">
+        <span class="search-icon">🔍</span>
+      </div>
 
     </div>
 
