Ajout des couches avec fetch

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Centre des affaires de Lubumbashi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+
+    <!-- Link CSS realiser -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
 
@@ -43,10 +45,9 @@
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="{{ url_for('static', filename='js/L.Geoserver.js')}}"></script>
+    <!-- Lien avec les fichiers JavaScript -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="{{ url_for('static', filename='js/script.js')}}"></script>
-    
+
   </body>
 </html>
