--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,6 +135,21 @@ body, html {
   color: #667;
 }
 
+.reset-button {
+  margin-top: 10px;
+  padding: 8px 12px;
+  background-color: #f44336;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.reset-button:hover {
+  background-color: #d32f2f;
+}
+
+
 /* ASPECTS RESPONSIVES DE LA PAGE */
 
 /*Responsive : écran moyen (PC) */
