--- a/templates/index.html
+++ b/templates/index.html
@@ -60,20 +60,20 @@
       <button id="toggleRightSidebar" class="toggle-right-sidebar">❯</button>
 
       <div class="right-content">
-        <!-- BOutons de zoom -->
+        <!-- Boutons de zoom -->
         <div id="customZoom" class="zoom-controls">
-          <button id="zoomIn">➕</button>
-          <button id="zoomOut">➖</button>
+          <button id="zoomIn" title="Zoom in">➕</button>
+          <button id="zoomOut" title="Zoom out">➖</button>
         </div>
 
         <div class="editing-tools">
           <!-- Bouton pour la modification des donnees -->
-          <button id="addPointBtn">➕ Ajouter un point</button>
-          <button id="editPointBtn">✏️ Modifier un point</button>
+          <button id="addPointBtn" title="Ajouter un point">➕</button>
+          <button id="editPointBtn" title="Modifier un point">✏️</button>
         </div>
 
         <!-- Boutons des fonds des cartes -->
-        <div class="basemap-switcher">
+        <div class="basemap-switcher" title="Changer le fond de carte">
           <select id="baseLayerSelect">
             <option value="osm">OpenStreetMap</option>
             <option value="esri">Esri Satellite</option>
