--- a/templates/index.html
+++ b/templates/index.html
@@ -9,25 +9,30 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"> 
 
+    <!-- Ajout d'une adresse afin de personnaliser mes icones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   </head>
   <body>
 
     <!-- BARRE HORIZONTAL EN HAUT -->
+
     <!--Affichage de la barre de haut-->
-    <div class="topbar">
+    <section class="topbar">
       <h2 class="name">Centre des affaires de Lubumbashi</h2>
       <button class="Contact">Contact</button>
-    </div>
+    </section>
 
     <!--Affichage de la carte-->
     <div id="map"></div>
 
     <!-- SIDEBAR DE GAUCHE -->
+
     <!--Ajout d'un bouton pour afficher et masquer le menu de gauche-->
     <button class="toggle-sidebar" aria-label="Afficher/Masquer le menu">☰</button>
 
     <!--Menu de gauche-->
-    <div class="sidebar">
+    <section class="sidebar">
       <h3><strong>Catégories</strong></h3>
       <select id="categorie" name="categorie">
         <option value="" selected>-- Choisis une catégorie --</option>
@@ -52,36 +57,44 @@
       <!-- Boutton de reinitialisation des options de recherches -->
       <button id="resetFilters" class="reset-button">Réinitialiser les filtres</button>
 
-    </div>
+    </section>
 
 
     <!-- SIDEBAR DE DROITE -->
-    <div class="right-tools" id="rightSidebar">
-      <button id="toggleRightSidebar" class="toggle-right-sidebar">❯</button>
 
+    <section class="right-tools" id="rightSidebar">
       <div class="right-content">
+        
         <!-- Boutons de zoom -->
-        <div id="customZoom" class="zoom-controls">
-          <button id="zoomIn" title="Zoom in">➕</button>
-          <button id="zoomOut" title="Zoom out">➖</button>
+        <div class="zoom-controls">
+          <button id="zoomIn" title="zoom avant"><i class="fas fa-plus"></i></button>
+          <button id="zoomOut" title="zoom arrière"><i class="fas fa-minus"></i></button>
         </div>
 
-        <div class="editing-tools">
-          <!-- Bouton pour la modification des donnees -->
-          <button id="addPointBtn" title="Ajouter un point">➕</button>
-          <button id="editPointBtn" title="Modifier un point">✏️</button>
+        <!-- Bouton pour zoom étendu -->
+        <div class="zoom-extent">
+          <button id="zoomExtentBtn" title="Vue d'ensemble"><i class="fas fa-expand"></i></button>
         </div>
+
 
         <!-- Boutons des fonds des cartes -->
-        <div class="basemap-switcher" title="Changer le fond de carte">
-          <select id="baseLayerSelect">
-            <option value="osm">OpenStreetMap</option>
-            <option value="esri">Esri Satellite</option>
-          </select>
+        <div class="basemap-switcher">
+          <button id="baseLayerBtn" title="Changer le fond de carte"><i class="fas fa-layer-group"></i></button>
+          <ul id="basemapMenu" class="basemap-menu hidden">
+            <li data-layer="osm">OpenStreetMap</li>
+            <li data-layer="esri">ESRI Satellite</li>
+          </ul>
         </div>
 
+        <!-- Bouton pour la modification des donnees -->
+        <div class="editing-tools">
+          <button id="addPointBtn" title="Ajouter un point"><i class="fas fa-map-marker-alt"></i></button>
+          <button id="editPointBtn" title="Modifier un point"><i class="fas fa-pen"></i></button>
+        </div>
+
+        
       </div>
-    </div>
+    </section>
 
     <!-- LIEN JavaScripts -->
     <!-- Lien avec les fichiers JavaScript -->
