Reeverification des styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,6 +96,26 @@
       </div>
     </section>
 
+    <!-- FENETRE CONTEXTUELLE -->
+    <!-- Modal pour l'édition des points -->
+    <div id="modalMessage" class="custom-modal hidden">
+      <div class="modal-content">
+        <p>Cliquez sur un point pour modifier.</p>
+        <button id="closeModalBtn">Fermer</button>
+      </div>
+    </div>
+
+    <!-- Modal pour l'ajout de points -->
+    <div id="modalAddPoint" class="custom-modal hidden">
+      <div class="modal-content">
+        <p>Cliquez sur la carte pour ajouter un nouveau point.</p>
+        <button id="closeAddPointModalBtn">Fermer</button>
+      </div>
+    </div>
+
+
+
+
     <!-- LIEN JavaScripts -->
     <!-- Lien avec les fichiers JavaScript -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
