--- a/static/css/style.css
+++ b/static/css/style.css
@@ -295,6 +295,43 @@ body, html {
   opacity: 1;
 }
 
+/* FENETRE CONTEXTUELLE */
+.custom-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2000;
+}
+
+.custom-modal.hidden {
+  display: none;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  text-align: center;
+}
+
+.modal-content button {
+  margin-top: 15px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  background: #237bdf;
+  color: white;
+  cursor: pointer;
+}
+
+
 /* ASPECTS RESPONSIFS DE LA PAGE */
 
 /*Responsive : écran moyen (PC) */
