Ajout du spinner de chagement des donnees

--- a/templates/index.html
+++ b/templates/index.html
@@ -116,6 +116,11 @@
       </div>
     </div>
 
+    <!-- Ajout d'un outil pour dire de patienter (Spinner) -->
+    <div id="spinner" class="hidden">
+      <div class="loader"></div>
+    </div>
+
 
 
 
